<resources>
    <string name="app_name">Drive All Night</string>
    <string name="Signin">Sign In</string>
    <string name="name">User Name</string>
    <string name="password">Password</string>
    <string name="forget">Forget Password?</string>
    <string name="signup">Sign Up</string>
    <string name="start">Get Started,</string>
    <string name="welcome">Welcome,</string>
    <string name="contd">Sign in to Continue!</string>
    <string name="new_member">I am a new member, </string>
    <string name="listen">Listen</string>
    <string name="drive">Drive All Night</string>
    <string name="tour">Tour All Night</string>
    <string name="shutup">Never Shut Up</string>
    <string name="plus">Drive All Night Plus</string>
    <string name="wills"><![CDATA[Wills & Wants]]></string>
    <string name="episodes">Episodes</string>
    <string name="left">1 hr 31 min left</string>
    <string name="duration">3 min</string>
</resources>