<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="15dp"
    android:paddingBottom="15dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtDay"
        android:textColor="@color/secondaryText"
        android:textSize="12dp"
        android:textAllCaps="true"
        android:text="@string/drive"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtTitle"
        android:textColor="@color/textColor"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/wills"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtDescription"
        android:maxLines="5"
        android:gravity="left"
        android:textColor="@color/secondaryText"
        android:textSize="18dp"
        android:text="@string/plus"/>

</LinearLayout>