<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SigninActivity"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:padding="20dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:id="@+id/imgUser"
                android:layout_marginTop="20dp"
                android:scaleType="centerCrop"
                app:strokeWidth="3dp"
                android:padding="5dp"
                app:strokeColor="@color/primaryColor"
                app:srcCompat="@drawable/ic_person"
                android:layout_gravity="center"
                app:shapeAppearance="@style/ShapeAppearance.App.CircleImageView"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/imgUser"
                android:layout_above="@id/signup"
                android:layout_marginBottom="20dp"
                android:orientation="vertical"
                android:gravity="center">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_lay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#c1c2c4"
                    app:boxStrokeWidth="1dp"
                    app:errorEnabled="true"
                    app:boxStrokeColor="@color/primaryDark"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/pass_lay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#c1c2c4"
                    app:boxStrokeWidth="1dp"
                    app:errorEnabled="true"
                    app:passwordToggleEnabled="true"
                    app:boxStrokeColor="@color/primaryDark"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="@color/black"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/forget"
                    android:textColor="@color/primaryDark"
                    android:layout_marginBottom="20dp"/>

                <Button
                    android:id="@+id/signin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    app:backgroundTint="@null"
                    android:text="@string/Signin"
                    android:textAllCaps="false"
                    android:textSize="16sp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_centerHorizontal="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="I'm a new member, "
                android:textSize="16sp"
                android:textColor="@color/primaryDark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textColor="@color/accent"
                android:textSize="16sp"
                android:textStyle="bold"/>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>